Changed some more naming

--- a/source/Simple301/App_Plugins/SimpleRedirects/app.html
+++ b/source/Simple301/App_Plugins/SimpleRedirects/app.html
@@ -1,4 +1,4 @@
-﻿<div id="Simple301" ng-controller="Simple301Controller" class="tables-data">
+<div id="SimpleRedirects" ng-controller="SimpleRedirectsController" class="tables-data">
     <div class="main-container  theme-template-dark ng-scope theme-template-light theme-deep-orange alert-open alert-with-mat-grow-top-right">
         <div class="main-content" autoscroll="true" bs-affix-target="" init-ripples="">
 
@@ -8,7 +8,7 @@
                 <div class="page-header">
                     <h1>
                         <i class="md md-list"></i>
-                        Simple 301 - Redirect Manager
+                        Simple Redirects Manager
                     </h1>
 
                     <!-- Clear Cache -->
@@ -18,7 +18,7 @@
                     </div>
 
                     <p class="lead">
-                        Add, Update, and Delete 301 redirects in the table below.
+                        Add, Update, and Delete redirects in the table below.
                     </p>
                 </div>
 
