--- a/source/SimpleRedirects/App_Plugins/SimpleRedirects/app.html
+++ b/source/SimpleRedirects/App_Plugins/SimpleRedirects/app.html
@@ -1,13 +1,12 @@
-<div id="SimpleRedirects" ng-controller="SimpleRedirectsController" class="tables-data">
-    <div class="main-container  theme-template-dark ng-scope theme-template-light theme-deep-orange alert-open alert-with-mat-grow-top-right">
-        <div class="main-content" autoscroll="true" bs-affix-target="" init-ripples="">
+<div id="SimpleRedirects" ng-controller="SimpleRedirectsController">
+    <div class="theme-deep-orange">
+        <div autoscroll="true" bs-affix-target="" init-ripples="">
 
-            <section class="tables-data forms-advanced">
+            <section>
 
                 <!-- Header Content -->
                 <div class="page-header">
                     <h1>
-                        <i class="md md-list"></i>
                         Simple Redirects Manager
                     </h1>
 
@@ -38,11 +37,9 @@
                     <!-- Error Message Content -->
                     <div class="row" ng-show="errorMessage.length > 0">
                         <div class="col-md-12">
-                            <div class="bs-component">
-                                <div class="alert alert-dismissible alert-danger">
-                                    <button type="button" class="close" ng-click="clearErrorMessage()">×</button>
-                                    <p> Error : {{errorMessage}}</p>
-                                </div>
+                            <div class="alert alert-dismissible alert-danger">
+                                <button type="button" class="close" ng-click="clearErrorMessage()">×</button>
+                                <p> Error : {{errorMessage}}</p>
                             </div>
                         </div>
                     </div>
