Import options + delete all redirects function

--- a/source/SimpleRedirects.Site/App_Plugins/SimpleRedirects/import.html
+++ b/source/SimpleRedirects.Site/App_Plugins/SimpleRedirects/import.html
@@ -3,18 +3,16 @@
     <input id="redirectImportFile" type="file" accept="text/csv" required/>
 </div>
 
-<!-- Checkbox - override existing redirects -->
+<!-- Checkbox - update existing redirects -->
 <div>
     <label>
-        <input id="overrideCheckbox" type="checkbox">Override any existing redirects?
+        <input id="updateExistingCheckbox" type="checkbox">Update any existing redirects
     </label>
 </div>
 
 <!-- Checkbox - empty list and add all imports -->
 <div>
     <label>
-        <input id="emptyAndReimportCheckbox" type="checkbox">Delete current redirects
+        <input id="clearImportsCheckbox" type="checkbox">Delete all existing redirects before import
     </label>
 </div>
-
-
