--- a/source/SimpleRedirects.Site/App_Plugins/SimpleRedirects/app.html
+++ b/source/SimpleRedirects.Site/App_Plugins/SimpleRedirects/app.html
@@ -10,8 +10,13 @@
                         Simple Redirects Manager
                     </h1>
                     
-                    <!-- Clear Cache -->
+                    <!-- Delete All Redirects -->
                     <div class="pull-right">
+                        <button class="btn btn-danger btn-sm" ng-click="deleteAllRedirects()">Delete All</button>
+                    </div>
+                    
+                    <!-- Clear Cache -->
+                    <div class="pull-right padding-right">
                         <span ng-show="cacheCleared">Cache Cleared!</span>
                         <button class="btn btn-info btn-sm" ng-click="clearCache()">Clear Cache</button>
                     </div>
