Add confirmation dialog on delete all

--- a/source/SimpleRedirects.Site/App_Plugins/SimpleRedirects/app.html
+++ b/source/SimpleRedirects.Site/App_Plugins/SimpleRedirects/app.html
@@ -12,7 +12,7 @@
                     
                     <!-- Delete All Redirects -->
                     <div class="pull-right">
-                        <button class="btn btn-danger btn-sm" ng-click="deleteAllRedirects()">Delete All</button>
+                        <button class="btn btn-danger btn-sm" ng-click="openDeleteConfirmationOverlay()">Delete All</button>
                     </div>
                     
                     <!-- Clear Cache -->
